parser/y.output

state 0
	$accept: .contract_declaration $end 

	CONTRACT  shift 2
	.  error

	contract_declaration  goto 1

state 1
	$accept:  contract_declaration.$end 
	contract_declaration:  contract_declaration.NEWLINE 

	$end  accept
	NEWLINE  shift 3
	.  error


state 2
	contract_declaration:  CONTRACT.IDENT contract_read LBRACE NEWLINE contract_body RBRACE 

	IDENT  shift 4
	.  error


state 3
	contract_declaration:  contract_declaration NEWLINE.    (94)

	.  reduce 94 (src line 295)


state 4
	contract_declaration:  CONTRACT IDENT.contract_read LBRACE NEWLINE contract_body RBRACE 
	contract_read: .    (91)

	READ  shift 6
	.  reduce 91 (src line 285)

	contract_read  goto 5

state 5
	contract_declaration:  CONTRACT IDENT contract_read.LBRACE NEWLINE contract_body RBRACE 

	LBRACE  shift 7
	.  error


state 6
	contract_read:  READ.    (92)

	.  reduce 92 (src line 287)


state 7
	contract_declaration:  CONTRACT IDENT contract_read LBRACE.NEWLINE contract_body RBRACE 

	NEWLINE  shift 8
	.  error


state 8
	contract_declaration:  CONTRACT IDENT contract_read LBRACE NEWLINE.contract_body RBRACE 
	contract_data: .    (88)

	DATA  shift 11
	.  reduce 88 (src line 274)

	contract_data  goto 10
	contract_body  goto 9

state 9
	contract_declaration:  CONTRACT IDENT contract_read LBRACE NEWLINE contract_body.RBRACE 

	RBRACE  shift 12
	.  error


state 10
	contract_body:  contract_data.statements 
	statements: .    (1)

	.  reduce 1 (src line 129)

	statements  goto 13

state 11
	contract_data:  DATA.LBRACE NEWLINE var_declarations NEWLINE RBRACE NEWLINE 

	LBRACE  shift 14
	.  error


state 12
	contract_declaration:  CONTRACT IDENT contract_read LBRACE NEWLINE contract_body RBRACE.    (93)

	.  reduce 93 (src line 290)


state 13
	statements:  statements.NEWLINE 
	statements:  statements.switch 
	statements:  statements.statement NEWLINE 
	contract_body:  contract_data statements.    (90)

	IDENT  shift 31
	CALL  shift 28
	CALLCONTRACT  shift 29
	INDEX  shift 32
	NEWLINE  shift 15
	BREAK  shift 23
	CONTINUE  shift 24
	IF  shift 22
	RETURN  shift 25
	WHILE  shift 26
	FUNC  shift 27
	FOR  shift 30
	SWITCH  shift 18
	VAR  shift 21
	.  reduce 90 (src line 279)

	variable  goto 19
	switch  goto 16
	statement  goto 17
	index  goto 20

state 14
	contract_data:  DATA LBRACE.NEWLINE var_declarations NEWLINE RBRACE NEWLINE 

	NEWLINE  shift 33
	.  error


state 15
	statements:  statements NEWLINE.    (2)

	.  reduce 2 (src line 131)


state 16
	statements:  statements switch.    (3)

	.  reduce 3 (src line 132)


state 17
	statements:  statements statement.NEWLINE 

	NEWLINE  shift 34
	.  error


state 18
	switch:  SWITCH.expr NEWLINE case default 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 35
	index  goto 45

state 19
	statement:  variable.ASSIGN expr 
	statement:  variable.ADD_ASSIGN expr 
	statement:  variable.SUB_ASSIGN expr 
	statement:  variable.MUL_ASSIGN expr 
	statement:  variable.DIV_ASSIGN expr 
	statement:  variable.MOD_ASSIGN expr 

	ADD_ASSIGN  shift 53
	SUB_ASSIGN  shift 54
	MUL_ASSIGN  shift 55
	DIV_ASSIGN  shift 56
	MOD_ASSIGN  shift 57
	ASSIGN  shift 52
	.  error


state 20
	index:  index.LBRACKET expr RBRACKET 
	statement:  index.ASSIGN expr 

	LBRACKET  shift 58
	ASSIGN  shift 59
	.  error


state 21
	statement:  VAR.IDENT ASSIGN expr 
	statement:  VAR.ident_list 

	IDENT  shift 60
	.  error

	ident_list  goto 61

state 22
	statement:  IF.expr LBRACE statements RBRACE elif else 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 62
	index  goto 45

state 23
	statement:  BREAK.    (33)

	.  reduce 33 (src line 190)


state 24
	statement:  CONTINUE.    (34)

	.  reduce 34 (src line 191)


state 25
	statement:  RETURN.    (35)
	statement:  RETURN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  reduce 35 (src line 192)

	expr  goto 63
	index  goto 45

state 26
	statement:  WHILE.expr LBRACE statements RBRACE 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 64
	index  goto 45

state 27
	statement:  FUNC.CALL par_declarations RPAREN LBRACE statements RBRACE 

	CALL  shift 65
	.  error


state 28
	statement:  CALL.params RPAREN 
	params: .    (5)

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  reduce 5 (src line 136)

	params  goto 66
	expr  goto 67
	index  goto 45

state 29
	statement:  CALLCONTRACT.cntparams RPAREN 
	cntparams: .    (8)

	IDENT  shift 69
	.  reduce 8 (src line 142)

	cntparams  goto 68

state 30
	statement:  FOR.IDENT IN expr LBRACE statements RBRACE 
	statement:  FOR.IDENT COMMA IDENT IN expr LBRACE statements RBRACE 
	statement:  FOR.IDENT IN expr DOUBLEDOT expr LBRACE statements RBRACE 

	IDENT  shift 70
	.  error


state 31
	variable:  IDENT.    (11)

	.  reduce 11 (src line 148)


state 32
	index:  INDEX.expr RBRACKET 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 71
	index  goto 45

state 33
	contract_data:  DATA LBRACE NEWLINE.var_declarations NEWLINE RBRACE NEWLINE 

	VAR  shift 74
	.  error

	var_declaration  goto 73
	var_declarations  goto 72

state 34
	statements:  statements statement NEWLINE.    (4)

	.  reduce 4 (src line 133)


state 35
	switch:  SWITCH expr.NEWLINE case default 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	NEWLINE  shift 75
	ADD  shift 78
	SUB  shift 79
	MUL  shift 76
	DIV  shift 77
	MOD  shift 80
	AND  shift 81
	OR  shift 82
	EQ  shift 83
	NOT_EQ  shift 84
	LT  shift 87
	GT  shift 88
	LTE  shift 85
	GTE  shift 86
	.  error


state 36
	expr:  LPAREN.expr RPAREN 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 89
	index  goto 45

state 37
	expr:  INT.    (50)

	.  reduce 50 (src line 218)


state 38
	expr:  FLOAT.    (51)

	.  reduce 51 (src line 219)


state 39
	expr:  STRING.    (52)

	.  reduce 52 (src line 220)


state 40
	expr:  QSTRING.    (53)

	.  reduce 53 (src line 221)


state 41
	expr:  TRUE.    (54)

	.  reduce 54 (src line 222)


state 42
	expr:  FALSE.    (55)

	.  reduce 55 (src line 223)


state 43
	expr:  CALL.params RPAREN 
	params: .    (5)

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  reduce 5 (src line 136)

	params  goto 90
	expr  goto 67
	index  goto 45

state 44
	expr:  CALLCONTRACT.cntparams RPAREN 
	cntparams: .    (8)

	IDENT  shift 69
	.  reduce 8 (src line 142)

	cntparams  goto 91

state 45
	index:  index.LBRACKET expr RBRACKET 
	expr:  index.    (58)

	LBRACKET  shift 58
	.  reduce 58 (src line 226)


state 46
	expr:  ENV.    (59)

	.  reduce 59 (src line 227)


state 47
	expr:  IDENT.    (60)

	.  reduce 60 (src line 228)


state 48
	expr:  LBRACKET.exprlist RBRACKET 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 93
	index  goto 45
	exprlist  goto 92

state 49
	expr:  LBRACE.exprmaplist RBRACE 

	STRING  shift 95
	.  error

	exprmaplist  goto 94

state 50
	expr:  SUB.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 96
	index  goto 45

state 51
	expr:  NOT.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 97
	index  goto 45

state 52
	statement:  variable ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 98
	index  goto 45

state 53
	statement:  variable ADD_ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 99
	index  goto 45

state 54
	statement:  variable SUB_ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 100
	index  goto 45

state 55
	statement:  variable MUL_ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 101
	index  goto 45

state 56
	statement:  variable DIV_ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 102
	index  goto 45

state 57
	statement:  variable MOD_ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 103
	index  goto 45

state 58
	index:  index LBRACKET.expr RBRACKET 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 104
	index  goto 45

state 59
	statement:  index ASSIGN.expr 

	IDENT  shift 47
	ENV  shift 46
	CALL  shift 43
	CALLCONTRACT  shift 44
	INDEX  shift 32
	INT  shift 37
	FLOAT  shift 38
	STRING  shift 39
	QSTRING  shift 40
	TRUE  shift 41
	FALSE  shift 42
	LPAREN  shift 36
	LBRACE  shift 49
	LBRACKET  shift 48
	SUB  shift 50
	NOT  shift 51
	.  error

	expr  goto 105
	index  goto 45

state 60
	statement:  VAR IDENT.ASSIGN expr 
	ident_list:  IDENT.    (78)

	ASSIGN  shift 106
	.  reduce 78 (src line 249)


state 61
	statement:  VAR ident_list.    (31)
	ident_list:  ident_list.IDENT 

	IDENT  shift 107
	.  reduce 31 (src line 188)


state 62
	statement:  IF expr.LBRACE statements RBRACE elif else 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	LBRACE  shift 108
	ADD  shift 78
	SUB  shift 79
	MUL  shift 76
	DIV  shift 77
	MOD  shift 80
	AND  shift 81
	OR  shift 82
	EQ  shift 83
	NOT_EQ  shift 84
	LT  shift 87
	GT  shift 88
	LTE  shift 85
	GTE  shift 86
	.  error


state 63
	statement:  RETURN expr.    (36)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 78
	SUB  shift 79
	MUL  shift 76
	DIV  shift 77
	MOD  shift 80
	AND  shift 81
	OR  shift 82
	EQ  shift 83
	NOT_EQ  shift 84
	LT  shift 87
	GT  shift 88
	LTE  shift 85
	GTE  shift 86
	.  reduce 36 (src line 193)


state 64
	statement:  WHILE expr.LBRACE statements RBRACE 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	LBRACE  shift 109
	ADD  shift 78
	SUB  shift 79
	MUL  shift 76
	DIV  shift 77
	MOD  shift 80
	AND  shift 81
	OR  shift 82
	EQ  shift 83
	NOT_EQ  shift 84
	LT  shift 87
	GT  shift 88
	LTE  shift 85
	GTE  shift 86
	.  error


state 65
	statement:  FUNC CALL.par_declarations RPAREN LBRACE statements RBRACE 
	par_declarations: .    (81)

	IDENT  shift 113
	.  reduce 81 (src line 258)

	ident_list  goto 112
	par_declaration  goto 111
	par_declarations  goto 110

state 66
	params:  params.COMMA expr 
	statement:  CALL params.RPAREN 

	COMMA  shift 114
	RPAREN  shift 115
	.  error


state 67
	params:  expr.    (6)
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 

	ADD  shift 78
	SUB  shift 79
	MUL  shift 76
	DIV  shift 77
	MOD  shift 80
	AND  shift 81
	OR  shift 82
	EQ  shift 83
	NOT_EQ  shift 84
	LT  shift 87
	GT  shift 88
	LTE  shift 85
	GTE  shift 86
	.  reduce 6 (src line 138)


state 68
	cntparams:  cntparams.COMMA IDENT COLON expr 
	statement:  CALLCONTRACT cntparams.RPAREN 

	COMMA  shift 116
	RPAREN  shift 117
	.  error


state 69
	cntparams:  IDENT.COLON expr 

	COLON  shift 118
	.  error


state 70
	statement:  FOR IDENT.IN expr LBRACE statements RBRACE 
	statement:  FOR IDENT.COMMA IDENT IN expr LBRACE statements RBRACE 
	statement:  FOR IDENT.IN expr DOUBLEDOT expr LBRACE statements RBRACE 

	COMMA  shift 120
	IN  shift 119
	.  error


state 71
	index:  INDEX expr.RBRACKET 
	expr:  expr.MUL expr 
	expr:  expr.DIV expr 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MOD expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.NOT_EQ expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
